airflow/logs/dag_id=get_raw_data_from_sources/run_id=manual__2022-12-07T16:07:12.235594+00:00/task_id=get_raw_data_from_postgres_sources/attempt=4.log
[2022-12-07T16:41:40.892+0000] {taskinstance.py:1165} INFO - 🤪 Dependencies all met for <TaskInstance: get_raw_data_from_sources.get_raw_data_from_postgres_sources manual__2022-12-07T16:07:12.235594+00:00 [queued]>
[2022-12-07T16:41:40.900+0000] {taskinstance.py:1165} INFO - 🤪 Dependencies all met for <TaskInstance: get_raw_data_from_sources.get_raw_data_from_postgres_sources manual__2022-12-07T16:07:12.235594+00:00 [queued]>
[2022-12-07T16:41:40.901+0000] {taskinstance.py:1362} INFO - 🤪 
--------------------------------------------------------------------------------
[2022-12-07T16:41:40.902+0000] {taskinstance.py:1363} INFO - 🤪 Starting attempt 4 of 7
[2022-12-07T16:41:40.902+0000] {taskinstance.py:1364} INFO - 🤪 
--------------------------------------------------------------------------------
[2022-12-07T16:41:40.916+0000] {taskinstance.py:1383} INFO - 🤪 Executing <Task(PythonOperator): get_raw_data_from_postgres_sources> on 2022-12-07 16:07:12.235594+00:00
[2022-12-07T16:41:40.919+0000] {standard_task_runner.py:55} INFO - 🤪 Started process 438 to run task
[2022-12-07T16:41:40.923+0000] {standard_task_runner.py:82} INFO - 🤪 Running: ['airflow', 'tasks', 'run', 'get_raw_data_from_sources', 'get_raw_data_from_postgres_sources', 'manual__2022-12-07T16:07:12.235594+00:00', '--job-id', '29', '--raw', '--subdir', 'DAGS_FOLDER/ingest_dwh_daily.py', '--cfg-path', '/tmp/tmpk0ods0m5']
[2022-12-07T16:41:40.925+0000] {standard_task_runner.py:83} INFO - 🤪 Job 29: Subtask get_raw_data_from_postgres_sources
[2022-12-07T16:41:40.972+0000] {task_command.py:376} INFO - 🤪 Running <TaskInstance: get_raw_data_from_sources.get_raw_data_from_postgres_sources manual__2022-12-07T16:07:12.235594+00:00 [running]> on host db3df0a6f633
[2022-12-07T16:41:41.019+0000] {taskinstance.py:1590} INFO - 🤪 Exporting the following env vars:
AIRFLOW_CTX_DAG_EMAIL=gp.data@galaxy.com.vn
AIRFLOW_CTX_DAG_OWNER=data_team
AIRFLOW_CTX_DAG_ID=get_raw_data_from_sources
AIRFLOW_CTX_TASK_ID=get_raw_data_from_postgres_sources
AIRFLOW_CTX_EXECUTION_DATE=2022-12-07T16:07:12.235594+00:00
AIRFLOW_CTX_TRY_NUMBER=4
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-12-07T16:07:12.235594+00:00
[2022-12-07T16:41:41.029+0000] {logging_mixin.py:137} INFO - 🤪 Start getting data from source Postgres - Table: users
[2022-12-07T16:41:41.030+0000] {logging_mixin.py:137} INFO - 🤪 <db_handler.postgres_handler.PostgresHandler object at 0x7f22e1f037f0> SELECT user_id name email mobile FROM public.users user_id name email mobile
[2022-12-07T16:41:41.032+0000] {taskinstance.py:1851} ERROR - 🤪 Task failed with exception
Traceback (most recent call last):
  File "/opt/bitnami/python/lib/python3.8/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/opt/bitnami/python/lib/python3.8/site-packages/airflow/operators/python.py", line 193, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/airflow/dags/processing/ingest_psql_source.py", line 57, in ingest_psql_source
    data = extract_data_from_source(postgres_handler=postgres_handler,
  File "/airflow/dags/processing/ingest_psql_source.py", line 11, in extract_data_from_source
    data = postgres_handler.action_db(query_str=sql_query, action='select')
  File "/airflow/dags/db_handler/postgres_handler.py", line 90, in action_db
    return self._get_data(query_str)
  File "/airflow/dags/db_handler/postgres_handler.py", line 52, in _get_data
    cur.execute(query_str)
psycopg2.errors.SyntaxError: syntax error at or near "name"
LINE 1: SELECT user_id name email mobile FROM public.users
                       ^

[2022-12-07T16:41:41.039+0000] {taskinstance.py:1401} INFO - 🤪 Marking task as UP_FOR_RETRY. dag_id=get_raw_data_from_sources, task_id=get_raw_data_from_postgres_sources, execution_date=20221207T160712, start_date=20221207T164140, end_date=20221207T164141
[2022-12-07T16:41:41.048+0000] {standard_task_runner.py:100} ERROR - 🤪 Failed to execute job 29 for task get_raw_data_from_postgres_sources (syntax error at or near "name"
LINE 1: SELECT user_id name email mobile FROM public.users
                       ^
; 438)
[2022-12-07T16:41:41.096+0000] {local_task_job.py:159} INFO - 🤪 Task exited with return code 1
[2022-12-07T16:41:41.115+0000] {taskinstance.py:2623} INFO - 🤪 0 downstream tasks scheduled from follow-on schedule check
